--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 # Formato: INSTANCE_NAME=instance_id:profile:region:ssh_host_alias:pem_file
 
 # Ejemplo:
-# DEVELOPMENT=i-1234567890abcdef0:sof:us-east-1:dev-server:~/.ssh/my-key.pem
+# DEVELOPMENT=i-1234567890abcdef0:dev:us-east-1:dev-server:~/.ssh/my-key.pem
 # PRODUCTION=i-abcdef1234567890:prod:eu-west-1:prod-server:~/.ssh/prod-key.pem
 
 # Guardar configuraciones aquí:
